--- a/vignettes/content/01introduction03.tex
+++ b/vignettes/content/01introduction03.tex
@@ -1,1 +1,1 @@
-In the next sections we are going to provide you with a basic functionality of the blima package by performing simple task of exporting data to the format acceptable for NCBI Gene Expression Omnibus submission. In fact supporting data for this package in the \href{http://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE56129}{GSE56129} dataset were prepared that way.
+In the next sections we are going to provide you with a basic functionality of the blima package by performing simple task of exporting data to the format acceptable for NCBI Gene Expression Omnibus submission. In fact supporting data for this package in the \href{http://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE56129}{GSE56129} dataset were prepared that way. The preprocessing shown in this manual is negative probes exclusion and background outlier correction with no other background correction step followed by variance stabilizing transformation (bead level) and quantile normalization (bead level for the vectors of unequal lengths). However in the manual there is also described how to utilize other preprocessing functions such as background subtraction, RMA like convolution and log2 transformation.  
