--- a/vignettes/content/07summarization.tex
+++ b/vignettes/content/07summarization.tex
@@ -3,4 +3,4 @@ Even though the \Biocpkg{blima} provides methods to work with unsummarized data 
 
 We allready prepared \Robject{adrToIllumina} mapping thus we create summarized matrix by calling the \Rfunction{createSummarizedMatrix}. Then we translate the ArrayAddressID to the ProbeID and create the output matrces in the form acceptable by the Gene Expression Omnibus. We prepare two matrices, first based on the data from the "qua" slot and second based on the "GrnF" slot. The "qua" matrix is called normalized data and "GrnF" matrix is called non normalized data.
 
-The data for dataset dataset \href{http://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE56129}{GSE56129} was prepared exactly this way using \Robject{annotationHumanHT12V4} object.
+The data for dataset dataset \href{http://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE56129}{GSE56129} was prepared in the similar fashion using \Robject{annotationHumanHT12V4} object.
