Added new functionality to perform quantileNormalize more efficiently and faster by calling c++ code interpolateSortedVectorRcpp_
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/blima@124895 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NEWS
+++ b/NEWS
@@ -7,3 +7,6 @@ blima NEWS:
 		* Added background subtraction by backgroundChannelSubtract
 		* Added performing transformation on channel by selectedChannelTransform
 		* Added performing RMA like convolution described in doi:10.1093/bioinformatics/btp040 as non parametric estimator by xieBacgroundCorrect
+		
+	Version 1.9.01
+		* Added faster quantile normalization based on C function to interpolate vectors.
